<resources>
    <string name="app_name">DrawerBottomNavApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home_delivery">توصيل منزلي</string>
    <string name="pickup_from_store">الاستلام من المتجر</string>
    <string name="select_delivery_option">حدد خيار التسليم</string>
    <string name="delivery_address">عنوان التسليم</string>
    <string name="change">يتغير</string>
    <string name="store_address">عنوان المتجر</string>
    <string name="change_pickup_point">تغيير نقطة الالتقاط</string>
    <string name="add_discount_code">أضف رمز الخصم</string>
    <string name="select_delivery_date_time">حدد تاريخ التسليم &amp; وقت</string>
    <string name="lbl_add_address">اضف عنوان</string>
    <string name="store_availability">توفر المتجر</string>
    <string name="map_view">عرض الخريطة</string>
    <string name="list_view">عرض القائمة</string>
    <string name="search_by_location">البحث حسب الموقع</string>
    <string name="pick_up_here">التقط هنا</string>
    <string name="saved_address">العنوان المحفوظ</string>
    <string name="lbl_add_new_address">+ إضافة عنوان جديد</string>
    <string name="lbl_mobile">متحرك :</string>
    <string name="qr_code_scan">مسح رمز الاستجابة السريعة</string>
    <string name="enter_manual_code">أدخل الرمز اليدوي</string>
    <string name="select_option">حدد الخيار</string>
    <string name="enter_branch_payment_code">أدخل رمز الدفع للفرع</string>
    <string name="lbl_thank_you">شكرًا لك!</string>
    <string name="delivery_options">خيار تسليم</string>
    <string name="lbl_transaction_success">كانت معاملتك ناجحة</string>
    <string name="product">Product</string>
    <string name="timeslot">TimeSlot</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="savai">Savai</string>
    <string name="savaisolanki123_gmail_com">savaisolanki123@ gmail.com</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="music_area">Music Area</string>
    <string name="tittle">Tittle</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="onboarding1">OnBoarding1</string>
    <string name="onboarding2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passagesons of Lorem Ipsum.</string>
    <string name="onboarding3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="onboarding_2">OnBoarding2</string>
    <string name="onboarding_3">OnBoarding3</string>
    <string name="start_text_advice">By continuing on this application you agree to our Terms of Use and Privacy Policy</string>
    <string name="start">Start</string>
    <string name="full_name">Full Name</string>
    <string name="sex">Xender</string>
    <string name="mm_dd_yyyy">dd/mm/yyyy</string>
    <string name="enter_your_full_name">Full Name</string>
    <string name="gender">gender</string>
    <string name="date_of_birth">16/12/2000</string>
    <string name="subscription">SubScription</string>
    <string name="select">select</string>
    <string name="village_name">Village Name</string>
    <string name="dis_name">District</string>
    <string name="pin_code">Pin Code</string>
    <string name="full_address">Full Address</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_cvv">Cvv</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="data2">Payment</string>
    <string name="data1">Address</string>
    <string name="data">BasicDetails</string>
    <string name="add_data">Add Data</string>
    <string name="enter_your_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="facebook_app_id">1539336160231437</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Dark">Dark</string>
    <string name="light">Light</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="create_folder">Create Folder</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="search">search</string>
    <string name="my_folder">My Folder</string>
    <string name="document_name">Document Name</string>
    <string name="document_date">Created on 16 dec 2022 12:35 Pm</string>


    <string-array name="subscription">
        <item>1 Months Plan Ruppies:4000</item>
        <item>2 Months Plan Ruppies:6000</item>
        <item>2 Months Plan Ruppies:8000</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>


</resources>