<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.addtocart.ui.AddToCartFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_to_cart"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:itemCount="10"
            tools:listitem="@layout/items_add_to_cart" />

        <RadioGroup
            android:id="@+id/rgDiagnosis"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/rg_background"
            app:layout_constraintTop_toBottomOf="@id/rvAddToCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rb_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:text="@string/Dark"
                android:padding="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rb_flat_selector"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:padding="@dimen/_20sdp"
                android:text="@string/light"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>